<resources>
    <string name="app_name">Lab 4 - Hangman</string>
    <string name="play_button">Play!</string>
    <string name="info_button">Information</string>
    <string name="welcome_text">Welcome to Hangman!</string>
    <string name="standard_display_word">*</string>
    <string name="guess_box">Enter guess</string>
    <string name="guess_botton">OK</string>
    <string name="display_tries">10 tries left</string>
    <string name="letter_used">Used letters</string>
    <string name="you_win_message">You have won the game</string>
    <string name="no_button">No</string>
    <string name="yes_button">Yes</string>
    <string name="play_again">Play again?</string>
    <string name="you_loose_message">You have lost the game!!</string>
    <string name="empty_alert">Error message</string>
    <string name="level_one_button">Play Hangman!</string>
    <string name="level_two_button">Play Level 2</string>
    <string name="leve_three_button">Play Level 3</string>
    <string name="about_button">About</string>
    <string name="about_text">Developed by Johan Hjalmarsson 2017</string>
    <string name="secret_word">The word was:</string>
    <string name="tries_left">Tries left:</string>
    <string name="choose_category">Choose category</string>
    <string name="player_one_text">Player One</string>
    <string name="player_two_text">Player Two</string>
    <string name="player_three_text">Player Three</string>
    <string name="player_four_text">Player Four</string>
    <string name="multiplayer_button">Play Multiplayer</string>
    <string name="choose_players">How many players?</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="write_word">Write a secret word for the next player:</string>
    <string name="secret_word_add">Secret word</string>
    <string name="when_ready">When your are ready; hit Play!</string>
    <string name="empty_text">Null!</string>
    <string name="question_mark">\?</string>
    <string name="next_player_button">Enter word for next player</string>

    <string-array name="category_array">
        <item>Category</item>
        <item>Animals</item>
        <item>Foods</item>
        <item>Professions</item>
        <item>Names</item>
        <item>Countries</item>
        <item>Drinks</item>
    </string-array>

    <string-array name="level_array">
        <item>Choose Level</item>
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
    </string-array>

    <string-array name="amount_of_players">
        <item>How many players?</item>
        <item>Two Players</item>
        <item>Three Players</item>
        <item>Four Players</item>
    </string-array>
</resources>
