<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context="com.johanhjalmarsson.lab4_hangman.PlayLevelTwo">

    <RelativeLayout
        android:id="@+id/hangManBox"
        android:layout_width="365dp"
        android:layout_height="275dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hang10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/errorBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/displayWord"
            android:layout_alignStart="@+id/usedLetterBox"
            android:layout_marginBottom="26dp"
            android:background="@color/colorAccent"
            android:elevation="@android:dimen/notification_large_icon_height"
            android:padding="5dp"
            android:text="@string/empty_alert"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="218dp" />

        <TextView
            android:id="@+id/displayWord"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="7dp"
            android:text="@string/standard_display_word"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="177dp" />

        <TextView
            android:id="@+id/triesLeftBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="59dp"
            android:layout_marginTop="35dp"
            android:text="@string/display_tries"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/usedLetterBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/triesLeftBox"
            android:layout_alignTop="@+id/triesLeftBox"
            android:layout_marginTop="34dp"
            android:text="@string/letter_used"
            android:textColor="@android:color/holo_purple" />
    </RelativeLayout>

    <EditText
        android:id="@+id/guessBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/guess_box"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hangManBox" />

    <Button
        android:id="@+id/guessButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:onClick="sendString"
        android:text="@string/guess_botton"
        app:layout_constraintBaseline_toBaselineOf="@+id/guessBox"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
